--- a/css/styles.css
+++ b/css/styles.css
@@ -229,3 +229,69 @@ button#paper {
 button#scissors {
   background-image: url(../img/scissors.svg);
 }
+
+/******MODAL & OVERLAY******/
+.overlay {
+  background-image: var(--clr-primary);
+  backdrop-filter: blur(3px);
+  opacity: 0.8;
+
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  display: none;
+}
+
+.overlay.display {
+  display: block;
+}
+
+.modal {
+  background-color: var(--clr-secondary);
+  border-radius: var(--border-radius);
+  height: 20rem;
+  width: 25vw;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  z-index: 10;
+  transition: opacity 0.5s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+
+  flex-direction: column;
+  align-items: center;
+  row-gap: 5rem;
+}
+
+.modal.display {
+  opacity: 1;
+}
+
+.modal__text {
+  color: var(--clr-accent);
+  font-family: var(--ff-base);
+  font-size: 2.4rem;
+  font-weight: var(--fw-bold);
+}
+
+.modal__btns button {
+  font-family: var(--ff-base);
+  font-size: 1.8rem;
+}
+
+.modal__btns .new-game-btn {
+  background-color: var(--clr-primary);
+  color: var(--clr-accent);
+  margin-right: 3rem;
+}
+
+.modal__btns .exit-btn {
+  background-color: var(--clr-secondary-light);
+  color: var(--clr-primary);
+}
