--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ main {
   position: absolute;
   top: 0;
   left: 0;
+  padding: 0 2rem;
 
   flex-direction: column;
   row-gap: 5rem;
@@ -135,12 +136,13 @@ main {
 .game__header p {
   color: var(--clr-secondary-light);
   font-family: var(--ff-accent);
-  font-size: 5.2rem;
+  font-size: calc(2.4rem + 2vw);
+  text-align: center;
 }
 
 .game__header button {
   background-color: var(--clr-accent);
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-family: var(--ff-base);
   font-weight: var(--fw-bold);
   align-self: center;
@@ -149,7 +151,7 @@ main {
 .game__round {
   background-color: var(--clr-primary-light);
   border-radius: var(--border-radius);
-  padding: 4rem 0;
+  padding: 2rem 0;
   width: 100%;
 
   justify-content: space-between;
@@ -157,7 +159,7 @@ main {
 
 .game__round--player,
 .game__round--computer {
-  flex-basis: 30%;
+  flex-basis: 35%;
   flex-direction: column;
   align-items: center;
   row-gap: 2rem;
@@ -167,7 +169,7 @@ main {
 .game__round--computer p {
   color: var(--clr-secondary-light);
   font-family: var(--ff-base);
-  font-size: 2.8rem;
+  font-size: calc(1.4rem + 1vw);
   font-weight: var(--fw-regular);
 }
 
@@ -180,13 +182,24 @@ main {
 .game__round--result {
   color: var(--clr-accent);
   font-family: var(--ff-base);
-  font-size: 3.2rem;
+  font-size: calc(1.4rem + 2vw);
   font-weight: var(--fw-bold);
+  line-height: 1.5;
+  text-align: center;
 
   align-self: center;
 }
 
+.game__round--result span {
+  color: var(--clr-secondary-light);
+  font-size: calc(1.2rem + 1vw);
+
+  display: block;
+}
+
 .game__weapons {
+  padding-top: 2rem;
+
   flex-direction: column;
   align-items: center;
   row-gap: 3rem;
@@ -195,7 +208,7 @@ main {
 .game__weapons--heading {
   color: var(--clr-secondary-light);
   font-family: var(--ff-base);
-  font-size: 3.2rem;
+  font-size: calc(1.4rem + 2vw);
 }
 
 .game__weapons--btns {
@@ -209,8 +222,8 @@ main {
   background-position: center;
   background-repeat: no-repeat;
   background-size: 80%;
-  height: 15rem;
-  width: 15rem;
+  height: 10rem;
+  width: 10rem;
   transition: all 0.3s ease-in-out;
 }
 
@@ -254,15 +267,14 @@ button#scissors {
   background-color: var(--clr-secondary);
   border-radius: var(--border-radius);
   height: 20rem;
-  width: 25vw;
+  width: 50vw;
 
   position: absolute;
-  top: 50%;
+  top: -150%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
+  transform: translate(-50%, 0);
   z-index: 10;
-  transition: opacity 0.5s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+  transition: all 0.5s cubic-bezier(0.465, 0.183, 0.153, 0.946);
 
   flex-direction: column;
   align-items: center;
@@ -270,19 +282,21 @@ button#scissors {
 }
 
 .modal.display {
-  opacity: 1;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .modal__text {
   color: var(--clr-accent);
   font-family: var(--ff-base);
-  font-size: 2.4rem;
+  font-size: calc(1.4rem + 2vw);
   font-weight: var(--fw-bold);
 }
 
 .modal__btns button {
   font-family: var(--ff-base);
-  font-size: 1.8rem;
+  font-size: 1.6rem;
+  transition: background-color 0.25s ease-in-out;
 }
 
 .modal__btns .new-game-btn {
@@ -294,4 +308,27 @@ button#scissors {
 .modal__btns .exit-btn {
   background-color: var(--clr-secondary-light);
   color: var(--clr-primary);
+}
+
+/******MEDIA QUERIES******/
+@media screen and (max-width: 768px) {
+  .game__weapons--btns {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .game__header {
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 3rem;
+  }
+
+  .game__weapons--btns {
+    width: 100%;
+  }
+
+  .modal {
+    width: 80vw;
+  }
 }
